[gd_scene load_steps=5 format=3 uid="uid://c532eyni0s47u"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_ltfgw"]
[ext_resource type="Texture2D" uid="uid://ccy4cen4myktr" path="res://Sprites/CustomCursor.png" id="1_ma8xu"]
[ext_resource type="Theme" uid="uid://iyqn1tdosatm" path="res://DefaultTheme.tres" id="2_tj527"]
[ext_resource type="Texture2D" uid="uid://cr57kvlh5nwqc" path="res://Sprites/GnomeHuntingManual.png" id="3_i0oo1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ltfgw")

[node name="Mouseblocker" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.00392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeRemainingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("2_tj527")
theme_override_font_sizes/font_size = 30
text = "Fastest Time: 11.4 seconds"

[node name="GameOverMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -286.0
offset_top = 194.0
offset_right = 97.0
offset_bottom = 236.0
grow_horizontal = 2
scale = Vector2(3.4211, 3.42381)
theme = ExtResource("2_tj527")
theme_override_font_sizes/font_size = 30
text = "GAME OVER"

[node name="GameWonMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -595.0
offset_top = 189.0
offset_right = -212.0
offset_bottom = 231.0
grow_horizontal = 2
scale = Vector2(3.4211, 3.42381)
theme = ExtResource("2_tj527")
theme_override_font_sizes/font_size = 30
text = "FOUND THE GNOME!!!!!!!!!"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -210.0
offset_right = -122.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.4211, 3.42381)
theme = ExtResource("2_tj527")
theme_override_font_sizes/font_size = 30
text = "NO TIME FOR GNOMES"
horizontal_alignment = 1
autowrap_mode = 1

[node name="HealthAnchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 39.0
offset_right = 105.0
offset_bottom = 113.0
grow_horizontal = 2

[node name="Health1" type="Sprite2D" parent="HealthAnchor"]
visible = false
position = Vector2(149.206, 27)
scale = Vector2(0.631424, 0.648095)
texture = ExtResource("1_ma8xu")

[node name="Health2" type="Sprite2D" parent="HealthAnchor"]
visible = false
position = Vector2(97.4116, 25.739)
scale = Vector2(0.631424, 0.648095)
texture = ExtResource("1_ma8xu")

[node name="Health3" type="Sprite2D" parent="HealthAnchor"]
visible = false
position = Vector2(45.2056, 26)
scale = Vector2(0.631424, 0.648095)
texture = ExtResource("1_ma8xu")

[node name="StartGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = 162.0
offset_right = -26.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.69141, 2.84993)
theme = ExtResource("2_tj527")
text = "Start Game"

[node name="RedDeath" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.784314, 0.0196078, 0.219608, 0.00392157)

[node name="HowToPlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_bottom = 72.0
grow_horizontal = 0
theme = ExtResource("2_tj527")
theme_override_font_sizes/font_size = 46
text = "?"

[node name="InstructionManual" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 101.0
offset_top = 38.0
offset_right = 1009.0
offset_bottom = 575.0
mouse_filter = 2
color = Color(0.355314, 0.355314, 0.355314, 1)

[node name="TextureRect" type="TextureRect" parent="InstructionManual"]
layout_mode = 0
offset_top = -1.0
offset_right = 906.0
offset_bottom = 535.0
texture = ExtResource("3_i0oo1")
expand_mode = 3

[node name="DevCredits" type="Label" parent="InstructionManual"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -2.0
offset_right = 1050.0
offset_bottom = 73.0
grow_vertical = 0
theme = ExtResource("2_tj527")
text = "Programming/development: LeslieLlama
Modeling: Moddisms
Concept/SFX: mikuv4x aka Saoirse042"

[node name="Music Credits" type="Label" parent="InstructionManual"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1009.0
offset_top = 21.0
offset_right = 139.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_tj527")
text = "Menu Music: Jazz Background Music Loop by Migfus20 
Game Music: Double bass upright Jazz loop by elzozo"
horizontal_alignment = 2

[connection signal="button_up" from="StartGame" to="." method="_on_start_game_button_up"]
[connection signal="button_up" from="HowToPlayButton" to="." method="_on_how_to_play_button_button_up"]
